# forgeplusplus

./: .gitignore  README.md
forge_carve/: README.md  ci_all.sh  pyproject.toml  test.py
forge_carve/configs/: eval_suite.yaml  model_tiny.yaml  train_mvp.yaml
forge_carve/scripts/: 03_train_phase.py  assert_jsonl_rows.py  audit_jsonl_v2.py  augment_ckpt_prog_int_vocab.py  backfill_proof_sha256.py  backfill_proof_sha256_v2.py  check_dataset_quality.py  check_dataset_sha256_contract.py  ci_sanity_math.sh  debug_cases.py  dedupe_jsonl.py  diag_apply_arith_window.py  diag_dataset_dups.py  diag_report_has_probe_abs_diff.py  eval_compare.py  eval_report_summary.py  eval_suite.py  field_influence_verify.py  fixup_y_to_runtime.py  inspect_jsonl_schema.py  make_data_csp.py  make_data_math.py  make_data_schema.py  make_math_teacher_cegis.py  make_mix_phase3_balanced.py  numcanon.py  sanity_corrupt_and_verify.py  suite_report_summary.py  train_baseline.py  train_mvp.py  verify_proofs.py
forge_carve/src/: numcanon.py
forge_carve/tests/: test_adv_mutator.py  test_arithmetic_division_true.py  test_augment_ckpt_prog_int_vocab.py  test_backfill_proof_sha256_v2.py  test_constrained_decode.py  test_constrained_decode_apply_arith_op.py  test_csp_proof_exec.py  test_data_counts_and_flips.py  test_data_io.py  test_dataset_sha256_contract.py  test_debug_cases_smoke.py  test_decode_limits.py  test_domain_tags.py  test_domain_tags_present.py  test_dsl_codec.py  test_emit_num_resolution.py  test_eval_compare.py  test_eval_orbit_flip_output.py  test_eval_suite_cegis_mode_default.py  (+44 more)
(+51 files in other folders)
